src/test/ui/rfc-2091-track-caller/taking-fn-pointer.stderr
warning: the feature `track_caller` is incomplete and may cause the compiler to crash
  --> $DIR/taking-fn-pointer.rs:5:12
   |
LL | #![feature(track_caller)]
   |            ^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

thread 'rustc' panicked at 'index out of bounds: the len is 1 but the index is 1', $SRC_DIR/libcore/slice/mod.rs:LL:COL
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace.

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/blob/master/CONTRIBUTING.md#bug-reports

note: rustc VERSION running on TARGET

note: compiler flags: FLAGS

